@@ -1,3 +1,8 @@
+2015-05-06  Mark Wielaard  <mjw@redhat.com>
+
+	* elflint.c (check_gnu_hash): Return early when 2nd hash function
+	shift too big.
+
 2015-05-05  Mark Wielaard  <mjw@redhat.com>
 
 	* nm.c (show_symbols): Handle dwarf_linesrc returning NULL.
